<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="56dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center">

        <TextView
            android:id="@+id/title_ai_scan"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/title_ai_scan"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="360dp"
            android:layout_height="196dp"
            android:contentDescription="@string/decoration"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/kumpulan_makanan" />

        <TextView
            android:id="@+id/description"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:text="@string/description_ai_scan"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_food"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:textStyle="bold"
            android:text="@string/scan_food"
            android:elevation="4dp"
            android:background="@drawable/rounded_button_red"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_ingredient"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"
            android:text="@string/scan_ingredien"
            android:elevation="4dp"
            android:background="@drawable/rounded_button_yellow"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null" />

    </LinearLayout>
</ScrollView>
