<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_food_scan"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:layout_marginTop="44dp"
            android:textStyle="bold"
            android:text="@string/scan_ingredient"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="360dp"
            android:layout_height="196dp"
            android:contentDescription="@string/decoration"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ingredient_scan" />

        <TextView
            android:id="@+id/result"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:text="@string/attention_food_scan"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/btn_open_camera"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:textStyle="bold"
            android:text="@string/open_camera"
            android:elevation="4dp"
            android:background="@drawable/rounded_button_yellowlight"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            />

        <Button
            android:id="@+id/btn_pick_gallery"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:text="@string/pick_gallery"
            android:elevation="4dp"
            android:background="@drawable/rounded_button_yellow"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            />
    </LinearLayout>
</ScrollView>
