<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_daily_consumtion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="@string/food_name"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/value_monitor_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_food_name">

            <TextView
                android:id="@+id/vm_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/calories"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/vm_glu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:gravity="start"
                android:text="@string/sugar"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toEndOf="@+id/vm_cal" />

            <TextView
                android:id="@+id/vm_chol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:gravity="start"
                android:text="@string/cholesterol"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toEndOf="@+id/vm_glu" />

            <TextView
                android:id="@+id/vm_nat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:gravity="start"
                android:text="@string/natrium"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toEndOf="@+id/vm_chol" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ic_delete_consumtion"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/ic_add_consumtion"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/value_monitor_item"
            card_view:layout_constraintTop_toTopOf="@+id/tv_food_name"
            android:src="@drawable/ic_delete_red_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>