<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_recipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_food_photo"
            android:layout_width="72dp"
            android:layout_height="100dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/food_photo"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/tv_food_name"
            android:src="@drawable/opor_ayam" />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_food_photo"
            android:text="@string/food_name"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_food_photo"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_food_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/food_status"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_food_photo"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_food_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_food_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_food_name"
            card_view:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/monitor_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            card_view:layout_constraintStart_toStartOf="@+id/tv_food_status"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_food_status">

            <TextView
                android:id="@+id/tm_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/calories"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tm_glu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:gravity="start"
                android:text="@string/sugar"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tm_chol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:gravity="start"
                android:text="@string/cholesterol"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tm_nat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:gravity="start"
                android:text="@string/natrium"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/value_monitor_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            card_view:layout_constraintStart_toStartOf="@+id/monitor_item"
            card_view:layout_constraintTop_toBottomOf="@+id/monitor_item">

            <TextView
                android:id="@+id/vm_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/calories"
                android:textSize="14sp"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/vm_glu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:gravity="start"
                android:text="@string/sugar"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/vm_chol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:gravity="start"
                android:text="@string/cholesterol"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/vm_nat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:gravity="start"
                android:text="@string/natrium"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            card_view:layout_constraintStart_toStartOf="@+id/value_monitor_item"
            card_view:layout_constraintTop_toBottomOf="@+id/value_monitor_item"
            android:text="@string/add_food_to_consume">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>